helm/traefik/demo/demo-traefik-copy/mirror-from-traefikservice-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-mirror-traefikservice
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.test.com`) && PathPrefix(`/traefik`)
      kind: Rule
      services:
        - name: mirror-from-traefikservice
          kind: TraefikService
