helm/traefik/demo/demo-traefik-copy/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-api-ingress-route
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.test.com`) && PathPrefix(`/traefik`)
      kind: Rule
      services:
        - name: mirror-from-service
          kind: TraefikService
